<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#9fdff7"
    tools:context="com.example.royalhospital.MainActivity">

    <TextView
        android:id="@+id/welcome_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:background="@color/white"
        android:padding="20dp"
        android:text="@string/welcome" />

    <ScrollView
        android:id="@+id/scrollLay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/welcome_title">

        <LinearLayout
            android:id="@+id/btn_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:orientation="vertical"
            android:padding="10dp">


            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:textSize="15dp"
                android:textAlignment="textStart"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:textSize="15dp"
                android:textAlignment="textStart"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:textSize="15dp"
                android:textAlignment="textStart"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:textSize="15dp"
                android:textAlignment="textStart"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:textSize="15dp"
                android:textAlignment="textStart"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:textSize="15dp"
                android:textAlignment="textStart"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:textSize="15dp"
                android:textAlignment="textStart"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:textSize="15dp"
                android:textAlignment="textStart"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:textSize="15dp"
                android:textAlignment="textStart"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:textSize="15dp"
                android:textAlignment="textStart"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:textSize="15dp"
                android:textAlignment="textStart"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:textSize="15dp"
                android:textAlignment="textStart"/>

        </LinearLayout>
    </ScrollView>



    <LinearLayout
        android:id="@+id/my_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="20dp">

        <Button
            android:id="@+id/btn_goBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="260dp"
            android:text="@string/go_back" />

        <TextView
            android:id="@+id/option_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/title_1"
            android:textSize="40dp" />


        <TextView
            android:id="@+id/option_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/description_1" />

        <FrameLayout
            android:id="@+id/myFrame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <VideoView
                android:id="@+id/video_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </FrameLayout>


        <TextView
            android:id="@+id/bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:padding="10dp"
            android:layout_marginTop="10dp"
            android:textAlignment="center"
            android:text="@string/bottom"/>

    </LinearLayout>

</RelativeLayout>